--- a/src/app/components/gridsklls/gridsklls.component.html
+++ b/src/app/components/gridsklls/gridsklls.component.html
@@ -1,19 +1,36 @@
 <div class="md:pr-80 lg:pr-0 2xl:absolute 2xl:mr-98 2xl:pt-20 top-20 right-96" @enterState>
   <div class="hover:animate-bounce cursor-pointer flex justify-center  duration-300 ">
-    <img class="w-20  mt-5 object-contain " src='../../../assets/tailwind.png' />
+    <a href="https://tailwindcss.com/" target="_blank">
+      <img class="w-20  mt-5 object-contain " src='../../../assets/tailwind.png' />
+    </a>
   </div>
 
   <div class="flex gap-10 pt-8">
-    <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/bootstrap.png' />
-    <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/css.png' />
-    <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/ts.png' />
+    <a href="https://getbootstrap.com/" target="_blank">
+      <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/bootstrap.png' />
+    </a>
+    <a href="https://getbootstrap.com/" target="_blank">
+      <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/css.png' />
+    </a>
+    <a href="https://www.typescriptlang.org/" target="_blank">
+      <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/ts.png' />
+    </a>
   </div>
 
   <div class=" flex gap-10 pt-8">
-    <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/java.png' />
-    <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/javascript.png' />
-    <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/angular.png' />
+    <a href="https://www.java.com/es/" target="_blank">
+      <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/java.png' />
+    </a>
+    <a href="https://www.javascript.com/" target="_blank">
+      <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/javascript.png' />
+    </a>
+    <a href="https://angular.io/" target="_blank">
+      <img class="w-20 bg-opacity-0 hover:animate-bounce cursor-pointer " src='../../../assets/angular.png' />
+    </a>
+
   </div>
   <div class="pt-8 flex justify-center">
-    <img class="w-20   hover:animate-bounce cursor-pointer" src='../../../assets/spring.png' />
+    <a href="https://spring.io/" target="_blank">
+      <img class="w-20   hover:animate-bounce cursor-pointer" src='../../../assets/spring.png' />
+    </a>
   </div>
