--- a/src/app/components/modal-form/modal-form.component.html
+++ b/src/app/components/modal-form/modal-form.component.html
@@ -1,4 +1,9 @@
-<h4 class="text-white text-3xl flex justify-center mt-5">{{title}}</h4>
+<div class="relative">
+  <h4 class="text-white text-3xl flex justify-center mt-5">{{title}}</h4>
+  <i
+    (click)="closeModal()" class="top-2 left-7 fa-solid fa-xmark absolute bottom-10 text-xl text-white cursor-pointer hover:text-red-500"></i>
+</div>
+
 <div class="p-5">
   <form [formGroup]="projectForm" (ngSubmit)="onSubmit()">
     <div class="flex flex-col">
